--- a/login.html
+++ b/login.html
@@ -19,9 +19,7 @@
 <body>
   <main class="mt-5">
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+       <img src="./img/login.png" alt="" srcset="">
     </div>
   </main>
   <footer class="text-muted">
