--- a/login.html
+++ b/login.html
@@ -13,6 +13,10 @@
     body {
       background-color: rgb(248, 249, 250);
     }
+
+    .hide{
+      display:none
+    }
   </style>
   
 </head>
@@ -20,6 +24,9 @@
 <body>
   <div class="form-outline mb-4">
     <img src="./img/login.png" alt="" srcset="" class="mx-auto d-block">
+  </div>
+  <div id = "alertId" class="alert alert-success fade in hide">
+     Usuario y/o Contraseña vacio!
   </div>
   <main class="mt-5">
     <div class="container text-center col-2">
@@ -40,12 +47,7 @@
         <!-- 2 column grid layout for inline styling -->
         <div class="row mb-4">
           <div class="col d-flex justify-content-center">
-           <!--  Checkbox
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" checked />
-              <label class="form-check-label"> Recordar </label>
-            </div> -->
-          </div>
+        </div>
       
         <!-- Submit button -->
         <button type="button" id="button_login" class="btn btn-primary btn-block mb-4" href="./index.html">Login</button>
