--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
       
         <div class="form-outline mb-4">
-          <input type="password" class="form-control" id="password" name="password" placeholder="Password" required/>
+          <input type="password" class="form-control" id="password" name="password" placeholder="Password" required/><span id="passwOK"></span>
         </div>
       
         <div class="row mb-4">
