Cambios de products y login

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       background-color: rgb(248, 249, 250);
     }
   </style>
-  <meta name="google-signin-scope" content="profile email">
-  <meta name="google-signin-client_id" content="234182601925-p0np49m5bmjgt3fhnrsrf2rcs63c5sdc.apps.googleusercontent.com">
+  <!--<meta name="google-signin-scope" content="profile email">-->
   <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <meta name="google-signin-client_id" content="234182601925-p0np49m5bmjgt3fhnrsrf2rcs63c5sdc.apps.googleusercontent.com">
 </head>
 
 <body>
@@ -48,8 +48,7 @@
         <div class="text-center">
           <p>No es Usuario? <a href="#!">Registro</a></p>
           <p>o ingresar con Google:</p>
-          <div class="g-signin2 btn btn-link btn-floating mx-1 g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
-          
+          <div class="g-signin2 btn btn-link btn-floating mx-1" data-onsuccess="onSignIn" data-theme="dark"></div>
         </div>
       </form>
     </div>
