--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       background-color: rgb(248, 249, 250);
     }
   </style>
-  <!--<meta name="google-signin-scope" content="profile email">-->
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <meta name="google-signin-client_id" content="234182601925-p0np49m5bmjgt3fhnrsrf2rcs63c5sdc.apps.googleusercontent.com">
+  <meta name="google-signin-scope" content="profile email">
 </head>
 
 <body>
