--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
       background-color: rgb(248, 249, 250);
     }
   </style>
-  <!--<meta name="google-signin-scope" content="profile email">-->
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
   <meta name="google-signin-client_id" content="234182601925-p0np49m5bmjgt3fhnrsrf2rcs63c5sdc.apps.googleusercontent.com">
 </head>
 
@@ -48,7 +47,7 @@
         <div class="text-center">
           <p>No es Usuario? <a href="#!">Registro</a></p>
           <p>o ingresar con Google:</p>
-          <div class="g-signin2 btn btn-link btn-floating mx-1" data-onsuccess="onSignIn" data-theme="dark"></div>
+          <div class="btn btn-link btn-floating mx-1" id="google-button"></div>
         </div>
       </form>
     </div>
