--- a/emercado/product-info.html
+++ b/emercado/product-info.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
+            <a class="nav-link" href="main.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="categories.html">Categorías</a>
@@ -38,8 +38,49 @@
   </nav>
   <main>
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <div class="row">
+        <div class="list-group" id="cat-list-container">
+        </div>
+        <div class="row mt-3">
+        <div id="comentario" class="col-5 list-group">
+          <h5><strong>Opinion</strong></h5>
+          <textarea type="text" class="form-control" id="com" rows="8" placeholder="Deja aqui tu comentario"></textarea>
+        </div>
+        <div class="col">
+          <h5><strong>Valoración</strong> - (5 muy Bueno y 1 muy Malo)</h5>
+          <select id="score" class="form-select" aria-label="Default select example">
+            <option selected>Deja tu Valoración</option>
+            <option value="5">5</option>
+            <option value="4">4</option>
+            <option value="3">3</option>
+            <option value="2">2</option>
+            <option value="1">1</option>
+          </select>
+          <button id="btnComentario" type="button" class="btn btn-secondary mt-4" aria-expanded="false">
+            Enviar
+          </button>
+          <div id = "alert" class="alert alert-danger alert-dismissible hide">
+            <a href="" class="close" data-dismiss="alert" aria-label="close">×</a>
+            <strong>Error!</strong> Debe estar logueado para comentar.
+          </div>
+        
+        </div>
+      </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="list-group">
+        </div>
+        <div class="col">
+          <div class="col mt-3">
+              <h3 class="mb-1">Productos Relacionados</h3>
+              <hr />
+          </div>
+          <div class="row" id="producto-relacionado">
+          </div>
+      </div>
       </div>
     </div>
   </main>
