Comentarios en codigo Entrega 3

--- a/emercado/product-info.html
+++ b/emercado/product-info.html
@@ -75,8 +75,8 @@
         </div>
         <div class="col">
           <div class="col mt-3">
-              <h3 class="mb-1">Productos Relacionados</h3>
-              <hr />
+              <h5 class="mb-1"><strong>Productos Relacionados</strong></h5>
+              <hr/>
           </div>
           <div class="row" id="producto-relacionado">
           </div>
