Mejoras Graficas Entrega 3

--- a/emercado/product-info.html
+++ b/emercado/product-info.html
@@ -73,10 +73,10 @@
       <div class="row">
         <div class="list-group">
         </div>
-        <div class="col">
+        <div class="col list-group">
           <div class="col mt-3">
-              <h5 class="mb-1"><strong>Productos Relacionados</strong></h5>
               <hr/>
+              <h5 class="mb-3"><strong>Productos Relacionados</strong></h5>
           </div>
           <div class="row" id="producto-relacionado">
           </div>
