--- a/emercado/product-info.html
+++ b/emercado/product-info.html
@@ -41,6 +41,7 @@
         <div class=" row list-group" id="cat-list-container">
           <div class="col" id="articulo">
           </div>
+          
           <div class="col">
             <h5><strong>Imagenes ilustrativas</strong></h5>
                 <div class="row" id="imagenes">
@@ -60,10 +61,13 @@
                       </div>
                 </div>
           </div>
+
           <div class="mt-3" id="comentarios">
             <hr/><h5 class="mb-3 font-weight-bold"><strong>Comentarios</strong></h5>
           </div>
         </div>
+
+
         <div class="row mt-3">
         <div id="comentario" class="col-5 list-group">
           <h5><strong>Opinion</strong></h5>
@@ -82,6 +86,7 @@
           <button id="btnComentario" type="button" class="btn btn-secondary mt-4" aria-expanded="false">
             Enviar
           </button>
+
           <div id = "alert" class="alert alert-danger alert-dismissible hide">
             <a href="" class="close" data-dismiss="alert" aria-label="close">×</a>
             <strong>Error!</strong> Debe estar logueado para comentar.
@@ -122,7 +127,8 @@
       <div></div>
     </div>
   </div>
-  <script src="js/Bootstrap-5.2.1-js/bootstrap.bundle.min.js"></script>
+  <div id="addModal"></div>
+  
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/product-info.js"></script>
