--- a/emercado/product-info.html
+++ b/emercado/product-info.html
@@ -39,8 +39,10 @@
     <div class="container">
       <div class="row">
         <div class=" row list-group" id="cat-list-container">
-          <div class="col" id="articulo">
+          <div class="col mt-3" id="comprar">
+            <button class="btn btn-success btnNext float-end" id="btnComprar">Comprar</button>
           </div>
+          <div class="col" id="articulo"></div>
           
           <div class="col">
             <h5><strong>Imagenes ilustrativas</strong></h5>
