--- a/emercado/index.html
+++ b/emercado/index.html
@@ -20,13 +20,14 @@
 
 <body>
   <div class="form-outline mb-4">
-    <img src="./img/login.png" alt="" srcset="" class="mx-auto d-block">
+    <img src="./img/login.png" alt="" srcset="" class="mx-auto img-fluid d-lg-block">
   </div>
   <main class="mt-5">
     <div class="container text-center col-2">
       <form id="login">
         <div class="form-outline mb-4">
-          <h4>Inicio de Sesion</h4>
+          <h4 class="d-none d-lg-block">Inicio de Sesion</h4>
+          <p class="d-block d-lg-none d-xl-none"><strong>Inicio de Sesion</strong></p>
         </div>
         
         <div class="form-outline mb-4">
@@ -47,7 +48,7 @@
         <div class="text-center">
           <p>No es Usuario? <a href="#!">Registro</a></p>
           <p>o ingresar con Google:</p>
-          <div class="btn" id="google-button"></div>
+          <div class="d-flex justify-content-center btn" id="google-button"></div>
         </div>
       </form>
       
