--- a/emercado/main.html
+++ b/emercado/main.html
@@ -34,7 +34,10 @@
     </div>
   </nav>
   <main>
-    <div class="jumbotron text-center"></div>
+    <div class="jumbotron text-center d-none d-lg-block d-xl-block"></div>
+    <div class="text-center d-block d-lg-none d-xl-none">
+      <img src="./img/cover_back.png" alt="" srcset="" class="d-block d-lg-none d-xl-none img-fluid mx-auto">
+    </div>
     <div class="album py-5 bg-light">
       <div class="container">
         <div class="row">
