--- a/emercado/products.html
+++ b/emercado/products.html
@@ -36,9 +36,9 @@
     </div>
   </nav>
   <main class="pb-5 container">
-    <div class="text-center p-4">
+    <div id="titulo" class="text-center p-4">
       <h2>Productos</h2>
-      <p class="lead">Verás aquí todos los productos de la categoria Autos.</p>
+      <p class="lead">Verás aquí todos los productos de la categoria Seleccionada.</p>
     </div>
     <div class="container">
       <div class="row">
