--- a/emercado/cart.html
+++ b/emercado/cart.html
@@ -108,7 +108,32 @@
               Premium 12 a 15 dias (5%)
             </label>
           </div>
-          
+          <hr>
+          <h2>Direccion de Envío</h2>
+          <div class="form-row">
+            <div class="col-md-6 mb-3">
+              <label for="validationServer01">Calle</label>
+              <input type="text" class="form-control" id="validationServer01" placeholder="Calle" required>
+            </div>
+            <div class="col-md-6 mb-3">
+              <label for="validationServer02">Esquina</label>
+              <input type="text" class="form-control" id="validationServer02" placeholder="Esquina" required>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="col-md-1 mb-3">
+              <label for="validationServer03">Numero</label>
+              <input type="text" class="form-control" id="validationServer03" placeholder="Numero" required>
+            </div>
+            <div class="col-md-3 mb-3">
+              <label for="validationServer04">Departamento</label>
+              <input type="text" class="form-control" id="validationServer04" placeholder="Departamento" required>
+            </div>
+            <div class="col-md-3 mb-3">
+              <label for="validationServer05">Ciudad</label>
+              <input type="text" class="form-control" id="validationServer05" placeholder="Ciudad" required>
+            </div>
+          </div>
         </template>
     </div>
   </main>
