--- a/emercado/cart.html
+++ b/emercado/cart.html
@@ -52,7 +52,7 @@
           <tbody id="items"></tbody>
           <tfoot>
             <tr id="footer">
-            <th scope="row" colspan="5">Carrito vacío - comience a comprar!</th>
+            <th scope="row" colspan="9">Carrito vacío - comience a comprar!</th>
             </tr>
           </tfoot>
           </table>
@@ -75,7 +75,7 @@
             <th scope="row">id</th>
             <td><img class="img-fluid"></td>
             <td>Café</td>
-            <td><input class="form-control cantidad"></td>
+            <td><input oninput="this.value = Math.max(this.value, 1)" class="form-control cantidad" pattern="^[0-9]+"></td>
             <td>
                 <button class="btn btn-info btn-sm">
                     +
