actualizo emercado y agrego otros

--- a/emercado/product-info.html
+++ b/emercado/product-info.html
@@ -90,7 +90,7 @@
           </button>
 
           <div id = "alert" class="alert alert-danger alert-dismissible hide">
-            <a href="" class="close" data-dismiss="alert" aria-label="close">×</a>
+            <a href="" class="close" data-dismiss="alert" aria-label="close"></a>
             <strong>Error!</strong> Debe estar logueado para comentar.
           </div>
         </div>
