--- a/emercado/cart.html
+++ b/emercado/cart.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>eMercado - Todo lo que busques está aquí</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.all.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -334,40 +335,6 @@
       <div></div>
     </div>
   </div>
-
-   <!-- Modal Carrito Vacio-->
-    <div class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" id="modalCarrito">
-      <div class="modal-dialog">
-        <div class="modal-content modalblur">
-          <div class="modal-header">
-            <strong><h4>Ups !</h4></strong>
-          </div>
-          <div class="modal-body">
-            <h6>Carrito vacío - comience a comprar!</h6>
-          </div>
-          <div class="modal-footer">
-            <button type="button" onclick="location.href='./categories.html';" class="btn btn-danger">Ver Categorias</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Modal Mensaje OK-->
-    <div class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" id="modalOK">
-      <div class="modal-dialog">
-        <div class="modal-content modalblur">
-    <div class="alert alert-success alert-dismissible fade show" role="alert" id="alert-success">
-      <h5>Datos guardados correctamente</h5>
-      <br>
-      <p>Gracias por su compra !</p>
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" onclick="location.href='./main.html';"></button>
-    </div>
-  </div>
-</div>
-</div>
-
-<!-- Modal -->
-<div id="addModal"></div>
    
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
