--- a/emercado/categories.html
+++ b/emercado/categories.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>eMercado - Todo lo que busques está aquí</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.all.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -42,7 +43,7 @@
     <div class="container">
       <div class="row">
         <div class="col text-end">
-          <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
+          <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons" id="controles" hidden>
             <input type="radio" class="btn-check" name="options" id="sortAsc">
             <label class="btn btn-light" for="sortAsc">A-Z</label>
             <input type="radio" class="btn-check" name="options" id="sortDesc">
@@ -53,7 +54,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
+        <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container" id="controles2" hidden>
           <div class="row container p-0 m-0">
             <div class="col">
               <p class="font-weight-normal text-end my-2">Cant.</p>
@@ -97,9 +98,6 @@
       <div></div>
     </div>
   </div>
-
-  <!-- Modal -->
-  <div id="addModal"></div>
 
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
