--- a/emercado/products.html
+++ b/emercado/products.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>eMercado - Todo lo que busques está aquí</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.all.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -43,7 +44,7 @@
     <div class="container">
       <div class="row">
         <div class="col text-end">
-          <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
+          <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons" id="controles" hidden>
             <div class="row p-0 m-0">
               <div class="col">
                 <p class="font-weight-normal text-end my-2">Buscar.</p>
@@ -63,7 +64,7 @@
       </div>
     </div>
       <div class="row">
-        <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
+        <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container" id="controles2" hidden>
           <div class="row container p-0 m-0">
             <div class="col">
               <p class="font-weight-normal text-end my-2">Precio</p>
@@ -108,7 +109,7 @@
       <div></div>
     </div>
   </div>
-  <div id="addModal"></div>
+
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/products.js"></script>
