--- a/emercado/main.html
+++ b/emercado/main.html
@@ -22,6 +22,9 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
+            <img src="./img/emercado.png" alt="" srcset="">
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" href="main.html">Inicio</a>
           </li>
           <li class="nav-item">
