--- a/emercado/my-profile.html
+++ b/emercado/my-profile.html
@@ -7,6 +7,7 @@
   <title>eMercado - Todo lo que busques está aquí</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.all.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
@@ -38,6 +39,9 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
+            <img src="./img/emercado.png" alt="" srcset="">
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="main.html">Inicio</a>
           </li>
           <li class="nav-item">
@@ -53,72 +57,79 @@
   <main>
     <div class="container">
       <div class="row">
-      <form class="row g-3 needs-validation" novalidate>
-        <div class="col-md-4">
-          <label for="validationCustom01" class="form-label">First name</label>
-          <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
-          <div class="valid-feedback">
-            Looks good!
+      <form class="row g-4 needs-validation" novalidate>
+        <div class="d-flex justify-content-between">
+        <h2>Perfil</h2>
+        <img src="./img/Foto_Perfil.jpg" id="imgperfil" class="rounded border border-success">
+      </div>
+        <hr>
+        <div class="col-6">
+          <label for="nombre" class="form-label">Primer Nombre*</label>
+          <input type="text" class="form-control" id="nombre" required>
+          <div class="invalid-feedback">
+            Campo requerido.
           </div>
         </div>
-        <div class="col-md-4">
-          <label for="validationCustom02" class="form-label">Last name</label>
-          <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
-          <div class="valid-feedback">
-            Looks good!
-          </div>
+        <div class="col-6">
+          <label for="segundoNombre" class="form-label">Segundo Nombre</label>
+          <input type="text" class="form-control" id="segundoNombre" disabled>
         </div>
-        <div class="col-md-4">
-          <label for="validationCustomUsername" class="form-label">Username</label>
+        <div class="col-6">
+          <label for="email" class="form-label">Cuenta usuario</label>
           <div class="input-group has-validation">
             <span class="input-group-text" id="inputGroupPrepend">@</span>
-            <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
-            <div class="invalid-feedback">
-              Please choose a username.
-            </div>
+            <input type="text" class="form-control" id="email" aria-describedby="inputGroupPrepend" required disabled>
           </div>
         </div>
-        <div class="col-md-6">
-          <label for="validationCustom03" class="form-label">City</label>
-          <input type="text" class="form-control" id="validationCustom03" required>
+        <div class="col-6">
+          <label for="apellido" class="form-label">Primer Apellido*</label>
+          <input type="text" class="form-control" id="apellido" required>
           <div class="invalid-feedback">
-            Please provide a valid city.
+            Campo requerido.
           </div>
         </div>
-        <div class="col-md-3">
-          <label for="validationCustom04" class="form-label">State</label>
-          <select class="form-select" id="validationCustom04" required>
-            <option selected disabled value="">Choose...</option>
-            <option>...</option>
-          </select>
-          <div class="invalid-feedback">
-            Please select a valid state.
-          </div>
+        <div class="col-6">
+          <label for="segundoApellido" class="form-label">Segundo Apellido</label>
+          <input type="text" class="form-control" id="segundoApellido" disabled>
         </div>
-        <div class="col-md-3">
-          <label for="validationCustom05" class="form-label">Zip</label>
-          <input type="text" class="form-control" id="validationCustom05" required>
-          <div class="invalid-feedback">
-            Please provide a valid zip.
-          </div>
+        <div class="col-6">
+          <label for="telefono" class="form-label">Telefono Contacto*</label>
+          <input type="text" class="form-control" id="telefono" required>
         </div>
-        <div class="col-12">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-            <label class="form-check-label" for="invalidCheck">
-              Agree to terms and conditions
-            </label>
-            <div class="invalid-feedback">
-              You must agree before submitting.
-            </div>
-          </div>
+        <div class="col-6">
+          <label for="formFile" class="form-label">Subir foto de perfil</label>
+          <input class="form-control" type="file" id="file" accept="image/png, image/jpg" onchange="subirImagen()" disabled>
         </div>
-        <div class="col-12">
-          <button class="btn btn-primary" type="submit">Submit form</button>
+        <div class="col-12 d-flex justify-content-between">
+          <button class="btn btn-primary" type="submit">Guardar</button>
+          <button class="btn btn-success" type="button" id="btnEditar" hidden>Editar</button>
         </div>
       </form>
     </div>
+    <br>
+    <p>*Campos obligatorios</p>
     </div>
+
+
+
+    <div aria-live="polite" aria-atomic="true" style="position: relative; min-height: 200px;">
+      <div class="toast" style="position: absolute; top: 0; right: 0;">
+        <div class="toast-header">
+          <img src="./img/Icon_Error.JPG" class="rounded mr-2" alt="...">
+          <strong class="mr-auto">Bootstrap</strong>
+          <small>Now</small>
+          <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="toast-body">
+          No cargo ninguna imagen de perfil.
+        </div>
+      </div>
+    </div>
+
+
+
   </main>
   <footer class="text-muted">
     <div class="container">
