--- a/emercado/products.html
+++ b/emercado/products.html
@@ -24,6 +24,9 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
+            <img src="./img/emercado.png" alt="" srcset="">
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="main.html">Inicio</a>
           </li>
           <li class="nav-item">
