--- a/emercado/cart.html
+++ b/emercado/cart.html
@@ -39,7 +39,7 @@
       </div>
     </div>
   </nav>
-  <main class="d-block">
+  <main class="d-block col-md-12">
     <div class="container">
       
       <div class="container">
