va cambio carrito

--- a/emercado/cart.html
+++ b/emercado/cart.html
@@ -39,9 +39,8 @@
       </div>
     </div>
   </nav>
-  <main class="d-block col-md-12">
+  <main class="d-block">
     <div class="container">
-      
       <div class="container">
         <form action="" method="get" class="needs-validation" novalidate>
         <table class="table">
