arreglos carrito y perfil

--- a/Web_PO/index.html
+++ b/Web_PO/index.html
@@ -153,6 +153,7 @@ body{
             <ul>
                 <li> Crecer profesionalmente</li>
                 <li> Terminar los objetivos y metas marcadas</li>
+                <li> Desarrollarme en algun area Deportiva</li>
             </ul>
             <hr>
             <h4>Intereses</h4>
@@ -190,8 +191,7 @@ body{
             <h4>Mitad/Fin del año 2023</h4>
             <ul>
                 <li> Mejorar aun mas mis conocimientos con Cursos</li>
-                <li> Mejorar mi perfil Laboral</li>
-                <li> Mejorar los ingresos</li>
+                <li> Mejorar mi perfil Laboral en área DevOps</li>
                 <li> Mejorar aun mas el nivel de Ingles</li>
                 <li> Finalizar Proyecto Final de Tecnicatura en UTU</li>
             </ul>
@@ -199,8 +199,8 @@ body{
             <h4>Dentro de 5 Años</h4>
             <ul>
                 <li> Crecer profesionalmente</li>
-                <li> Mejorar mi status economico y calidad de vida</li>
-                <li> Tener un titulo Universitario</li>
+                <li> Tener un titulo Universitario en IT</li>
+                <li> Tener la profesion en algun área del Deporte</li>
             </ul>
             <hr>
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -224,7 +224,6 @@ body{
             <h4>Pasos a seguir</h4>
             <ul>
                 <li> Poner en practica lo aprendido en Fase Dos y utilizar las CT de forma efectiva.</li>
-                <li> Seguir avanzando en la plataforma Voxy.</li>
                 <li> Seguir avanzando en la plataforma Voxy.</li>
                 <li> Ordenar los objetivos en base al tiempo de finalizacion</li>
                 <li> Organizar bien el tiempo para cada tarea, destinar mas tiempo a la tarea mas proxima a terminar</li>
