--- a/emercado/my-profile.html
+++ b/emercado/my-profile.html
@@ -64,7 +64,7 @@
         <hr>
         <div class="col-6">
           <label for="nombre" class="form-label">Primer Nombre*</label>
-          <input type="text" class="form-control" id="nombre" required>
+          <input type="text" class="form-control" id="nombre" required disabled>
           <div class="invalid-feedback">
             Campo requerido.
           </div>
@@ -82,7 +82,7 @@
         </div>
         <div class="col-6">
           <label for="apellido" class="form-label">Primer Apellido*</label>
-          <input type="text" class="form-control" id="apellido" required>
+          <input type="text" class="form-control" id="apellido" required disabled>
           <div class="invalid-feedback">
             Campo requerido.
           </div>
@@ -93,15 +93,15 @@
         </div>
         <div class="col-6">
           <label for="telefono" class="form-label">Telefono Contacto*</label>
-          <input type="text" class="form-control" id="telefono" required>
+          <input type="text" class="form-control" id="telefono" required disabled>
         </div>
         <div class="col-6">
           <label for="formFile" class="form-label">Subir foto de perfil</label>
           <input class="form-control" type="file" id="file" accept="image/png, image/jpg" onchange="subirImagen()" disabled>
         </div>
         <div class="col-12 d-flex justify-content-between">
-          <button class="btn btn-primary" type="submit">Guardar</button>
-          <button class="btn btn-success" type="button" id="btnEditar" hidden>Editar</button>
+          <button class="btn btn-primary" type="submit" id="btnGuardar" hidden>Guardar</button>
+          <button class="btn btn-success" type="button" id="btnEditar">Editar</button>
         </div>
       </form>
     </div>
